Update demo link for Aurora Portfolio project
Changed the demo URL in the Aurora Portfolio project metadata from 'https://aurora-portfolio.vercel.app' to 'https://mackenziedev.site'.

--- a/src/content/projects/aurora-portfolio.mdx
+++ b/src/content/projects/aurora-portfolio.mdx
@@ -6,7 +6,7 @@ image: "https://jojocraftde.xyz/aurora-screenshot.png"
 tags: ["Astro", "TypeScript", "Tailwind CSS", "MDX", "Portfolio", "Open Source"]
 category: "web"
 github: "https://github.com/yourusername/aurora-portfolio"
-demo: "https://aurora-portfolio.vercel.app"
+demo: "https://mackenziedev.site"
 order: 1
 ---
 
